--- a/AdatumWebsite/Views/Home/Index.cshtml
+++ b/AdatumWebsite/Views/Home/Index.cshtml
@@ -3,7 +3,7 @@
 }
 
 <div class="jumbotron">
-    <h1>This is demo for QA deployment Slot</h1>
+    <h1>welcome to Microsoft Azure</h1>
     <p class="lead">New approaches to quality manufacturing.</p>
     <p>@Html.ActionLink("Learn More >>", "About", "Home", new { }, new { Class = "btn btn-primary btn-large" })</p>
 </div>
